# mymlalgo

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
datasets/: __init__.py  generations_data.py  utils.py
test/: test_datasets_utils.py  test_generations_data.py
