[project]
name = "mymlalgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "torch>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
